Auth service micro set